# SEC-iEEG-Toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/cli/: localize_labelmap.bat  localize_surface.bat  visualize.bat
examples/scripts/: localize_all_methods.py  visualize_all_atlases.py
sec_ieeg/: coords.py  roi.py  utils.py  viz.py
sec_ieeg/cli/: localize.py  visualize.py
sec_ieeg/data/default/: MNI_T1.mgz
sec_ieeg/data/demo/: s1_electrode_coordinates.xlsx  s2_electrode_coordinates.xlsx
sec_ieeg/data/demo/mat_atlas/: MLF_l.mat  MLF_r.mat
sec_ieeg/data/demo/vtk_atlas/: BasalGanglia.vtk  Readme.txt
